upgrade java, spring boot, gradle, dependencies